# labrynth

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  build.py  install.sh  labrynth-cli.spec  labrynth.spec  launcher.py  pyproject.toml  reacher-1.0.1-py3-none-any.whl  reacher.spec  requirements.txt  setup.iss  setup.py
.github/workflows/: build-api-installers.yml  build-dashboard-installers.yml  build-installers.yml  build-prerelease.yml  build.yml  ci.yml  deploy-demo.yml  trigger-site-deploy.yml
.reacher-venv/: pyvenv.cfg
.reacher-venv/Scripts/: activate  activate.bat
api/: setup.py
arduino/omission/: Device.cpp  Laser.cpp  Laser.h
arduino/operant_FR/: Cue.h  Cue_Utils.h  Laser.cpp  Laser.h  Laser_Utils.cpp  LickCircuit.h  LickCircuit_Utils.cpp  Pump.h  Utils.cpp  Utils.h  operant_FR.ino
arduino/operant_PR/: Laser.h
cli/: __init__.py  __main__.py  app.py  client.py
dashboard/utils/: config.py  dashboard.py
docs/: README.md  conf.py  index.rst  multi-host-validation.md
docs/arduino/: operant_FR.md
docs/python/: local_dashboard.md  reacher.md
firmware/omission/: Pump.cpp  omission.ino
firmware/operant_FR/: Lever_Utils.h  Program_Utils.cpp  Pump_Utils.cpp  Pump_Utils.h
firmware/operant_PR/: LickCircuit.cpp
firmware/operant_VI/: Device.cpp  LickCircuit.cpp  operant_VI.ino
installer/: entitlements.plist  reacher.desktop  reacher.iss
installers/scripts/: setup.iss  setup.spec
lib/: setup.py
markdowns/python/: main.md
scripts/: bump-version.py
src/: setup.iss  setup.spec
src/api/: app.py  setup.spec
src/core/: main.py  setup.spec
src/dashboard/: main.py
src/reacher/: local_dashboard.py  main.py  network_dashboard.py  reacher.py  setup.iss  setup.spec
src/reacher.egg-info/: PKG-INFO  SOURCES.txt
ui/: setup.iss  setup.spec
web/: README.md  WEBSOCKET_FIX_PROMPT.xml  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vite.config.ts
(+637 files in other folders)
