[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "labrynth"
version = "2.2.15-dev"
description = "Labrynth application shell — build orchestrator and frontend"
requires-python = ">=3.10"
dependencies = [
    "reacher>=2.0.0",
    "pyinstaller>=6.0",
]

[project.optional-dependencies]
cli = [
    "prompt_toolkit>=3.0.0",
    "httpx>=0.27.0",
    "websockets>=12.0",
]

[project.scripts]
reacher-cli = "cli.__main__:main"

[tool.setuptools]
py-modules = ["build", "launcher"]
packages = ["cli"]
